# termin-base

./: CMakeLists.txt  install.sh  setup.py
.github/workflows/: ci.yml
cmake/: termin_baseConfig.cmake.in
include/tcbase/: input_enums.hpp  settings.h  tc_binding_types.h  tc_dlist.h  tc_log.h  tc_resource_map.h  tc_types.h  tcbase_api.h  tgfx_intern_string.h
include/tcbase/trent/: expected.h  hexascii.h  string_ext.h  yaml.h
include/termin/geom/: aabb.hpp  general_pose3.hpp  geom.hpp  mat44.hpp  pose3.hpp  quat.hpp  ray3.hpp  screw3.hpp  vec3.hpp
python/: CMakeLists.txt
python/bindings/: tcbase_module.cpp  trent_helpers.hpp
python/bindings/geom/: aabb.cpp  common.hpp  general_pose3.cpp  geom_module.cpp  mat44.cpp  pose3.cpp  quat.cpp  screw3.cpp  vec3.cpp  vec4.cpp
python/tcbase/: __init__.py  keys.py  settings.py
python/tcbase/include/tcbase/: tc_log.hpp  tc_pool.h  tc_value.h  tc_value_trent.hpp
python/tcbase/include/tcbase/trent/: buffer.h  json.h  trent.h  trent_path.h
python/tcbase/include/termin/geom/: mat33.hpp  vec2.hpp  vec4.hpp
src/: settings.cpp  tc_log.c  tc_pool.c  tc_resource_map.c  tc_value.c  tc_value_trent.cpp  tgfx_intern_string.c
src/trent/: json.cpp  string_ext.cpp  trent.cpp  trent_path.cpp  yaml.cpp
tests/: test_tc_value.c
tests/python/: test_tcbase_api.py
